objects/PC_Engagement_Program__c.object
<CustomObject>
    <description>Patient services program offered by the manufacturer or franchise.</description>
    <fields>
        <fullName>ACLS_Close_Time__c</fullName>
        <label>Close Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Program_Days__c</fullName>
        <label>Program Days</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Program_Fax__c</fullName>
        <label>Program Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Program_Phone__c</fullName>
        <label>Program Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ACLS_Start_Time__c</fullName>
        <label>Start Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_TimeZone__c</fullName>
        <label>TimeZone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EST</fullName>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>PST</fullName>
                </value>
                <value>
                    <fullName>MST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if the program is active and can be associated with patients.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Description__c</fullName>
        <description>Description and additional information about the program.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PC_Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the manufacturer with which the engagement program is associated.</description>
        <label>Manufacturer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Manufacturer does not exist. Please select a valid manufacturer association.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Manufacturer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Franchise</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Engagement Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_ProgramCaseRecordTypeNamespace__c</fullName>
        <description>This indicates the namespace of the record type mentioned in PC_ProgramCaseRecordType__c</description>
        <label>Program Case Record Type Namespace</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ProgramCaseRecordType__c</fullName>
        <description>This along with PC_ProgramCaseRecordType__c is used to derive the record type of the program case being created for a patient during enrollment.</description>
        <label>Program Case Record Type Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ProgramEmails__c</fullName>
        <description>Comma separated values of Engagement Program specific emails. Note - These should be pre-verified in Setup -&gt; Organization-Wide Address Settings.</description>
        <inlineHelpText>Comma separated values of Engagement Program specific emails. Note - These should be pre-verified in Setup -&gt; Organization-Wide Address Settings.</inlineHelpText>
        <label>Program Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Program_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Program Code provides a unique mnemonic or code value that can be used to reference engagement programs. It is expected that a program code would not change during the life of a program, whereas, the name may be modified.</description>
        <externalId>true</externalId>
        <inlineHelpText>Provide a short unique code that will not need to be changed.</inlineHelpText>
        <label>Program Code</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PC_Program_End_Date__c</fullName>
        <description>End date of the program</description>
        <label>Program End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Program_Start_Date__c</fullName>
        <description>Start date of the program</description>
        <label>Program Start Date</label>
        <type>Date</type>
    </fields>
    <label>Engagement Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_Manufacturer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Engagement Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Programs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>